--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -125,7 +125,7 @@
 
 
   .photos {
-    left: 15%;
+    left: 10%;
     position: relative;
     display: flex;
     justify-content: center;
@@ -174,6 +174,46 @@
         width: 500px;
       }
 
+    }
+
+    @media (max-width: 1600px) {
+      .photos {
+        left: 10%;
+      }
+      .me img,
+      .austin img, div {
+        width: 425px;
+        height: 600px; /* Adjust the aspect ratio for smaller screens */
+      }
+    }
+
+    @media (max-width: 1350px) {
+      .photos {
+        left: 10%;
+      }
+      .me img,
+      .austin img, div {
+        width: 350px;
+        height: 500px; /* Adjust the aspect ratio for smaller screens */
+      }
+    }
+
+    @media (max-width: 1100px) {
+
+      .me img,
+      .austin img, div {
+display: none;/* Adjust the aspect ratio for smaller screens */
+      }
+    }
+
+    /* Media Query for smaller screens */
+    @media (max-width: 768px) {
+
+      .me img,
+      .austin img, div {
+        width: 400px;
+        height: 500px; /* Adjust the aspect ratio for smaller screens */
+      }
     }
    
     @keyframes spinFace {
