got rid of the border

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -249,7 +249,7 @@
     height: 100%;
     // position: relative;
     margin-left: 100px;
-    border: lime 5px solid;
+    // border: lime 5px solid;
             // position: absolute;
         // left: 10%;
         // top: 45%;
