added a hamburger menu and finally made it responsive for mobile. Needs changes for the Aoout, Projects and Contact

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -176,6 +176,17 @@
 
     }
 
+    @media all and (max-width: 1600px) {
+      .home-page {
+        position: initial;
+      }
+    
+      .container {
+        position: initial;
+        
+      }
+    }
+
     @media (max-width: 1600px) {
       .photos {
         left: 10%;
