--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -42,9 +42,9 @@
     .text-area {
         position: absolute;
         left: 10%;
-        // top: 45%;
+        top: 45%;
         transform: translateY(-50%);
-        // width: 35%;
+        width: 35%;
         vertical-align: middle;
         display: table-cell;
         max-height: 90%;
