--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -11,7 +11,7 @@
     position: absolute;
     top: 0;
     z-index: 3;
-    min-height: 500px;
+    // min-height: 500px;
 
     .logo {
         display: block;
@@ -27,7 +27,7 @@
 
 
     nav {
-        display:block;
+        display: block;
         text-align: center;
         position: absolute;
         height: 210px;
@@ -132,4 +132,76 @@
                 }
             }
         }
+
+
+}        
+
+.hamburger-icon, .close-icon {
+    display: none;
+}
+
+@media all and (max-width: 936px) {
+    .nav-bar {
+        background: transparent;
+        width: 100%;
+        height: 70px;
+        background-color: #082d3a;
+        min-height: auto;
+        position: initial;
+
+        ul, nav {
+            display: none;
+        }
+
+        nav {
+            background-color: #082d3a;
+            // border: solid lime 5px;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            margin: 0;
+            position: fixed;
+            z-index: 2;
+
+            a {
+                border: solid #90E0EF 2px;
+                border-radius: 5px;
+                height: 100px;
+                font-size: 25px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        
+            a:after {
+                font-size: 20px;
+                opacity: 1;
+                position: initial;
+                width: auto;
+                margin-left: 10px;
+                font-weight: 200;
+            }
+            
+            a svg {
+                opacity: 1 !important;
+            }
+
+            &.mobile-show{
+                display: block;
+            }
+        }
+
+        .hamburger-icon, .close-icon {
+            display: block;
+            color:  #90E0EF;
+            // color: #0077B6;
+
+            position: absolute;
+            top: 15px;
+            right: 15px;
+        }
+    }
+    
+
 }
