--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -148,12 +148,14 @@
         background-color: #082d3a;
         min-height: auto;
         position: initial;
+        
 
         ul, nav {
             display: none;
         }
 
         nav {
+
             background-color: #082d3a;
             // border: solid lime 5px;
             width: 100%;
@@ -172,6 +174,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+
             }
         
             a:after {
@@ -181,6 +184,7 @@
                 width: auto;
                 margin-left: 10px;
                 font-weight: 200;
+
             }
             
             a svg {
@@ -189,17 +193,26 @@
 
             &.mobile-show{
                 display: block;
+
             }
         }
 
-        .hamburger-icon, .close-icon {
+        .hamburger-icon {
             display: block;
             color:  #90E0EF;
             // color: #0077B6;
-
             position: absolute;
+
             top: 15px;
             right: 15px;
+        }
+
+        .close-icon {
+            display: block;
+            color:  #90E0EF;
+            transform: translateX(555%);
+            position: absolute;
+            margin-top: 20px;
         }
     }
     
