testing to see where the X icon is on the page

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -209,11 +209,14 @@
 
         .close-icon {
             display: block;
-            color:  #90E0EF;
-            transform: translateX(557%);
+            color: #90E0EF;
             position: absolute;
-            margin-top: 20px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            cursor: pointer;
         }
+        
     }
     
 
