finally got a design I like and that makes sense for the closing link

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -101,6 +101,12 @@
                 }
             }
 
+            a.close-link {
+                &::after {
+                    content: "CLOSE"
+                }
+            }
+
             a.active {
                 svg {
                     color: #0077B6;
@@ -207,16 +213,17 @@
             right: 15px;
         }
 
-        .close-icon {
-            display: block;
-            color: #90E0EF;
-            position: absolute;
-            top: 65%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            cursor: pointer;
-        }
-        
+        // .close-icon {
+        //     display: block;
+        //     margin-left: 15px;
+        //     color: #90E0EF;
+        //     // margin-top: 10px;
+        //     // position: absolute;
+        //     // top: 65%;
+        //     // left: 50%;
+        //     // transform: translate(-50%, -50%);
+        //     cursor: pointer;
+        // }
     }
     
 
