just noticed it was displaying before 936px

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -213,17 +213,10 @@
             right: 15px;
         }
 
-        // .close-icon {
-        //     display: block;
-        //     margin-left: 15px;
-        //     color: #90E0EF;
-        //     // margin-top: 10px;
-        //     // position: absolute;
-        //     // top: 65%;
-        //     // left: 50%;
-        //     // transform: translate(-50%, -50%);
-        //     cursor: pointer;
-        // }
+        .close-icon {
+            display: block;
+            cursor: pointer;
+        }
     }
     
 
