fixed Home contact button getting smaller when hovered

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -76,7 +76,7 @@
       font-weight: 300;
       background-color: #90E0EF;
       color: #333;
-      border: 1px solid #90E0EF;
+      // border: 1px solid #90E0EF;
     }
   }
 
