--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -38,8 +38,8 @@
         animation-delay: 1s;
 }
 
-.about-page {
-    .text-area {
+
+    .text- {
         position: absolute;
         left: 10%;
         top: 45%;
@@ -114,4 +114,3 @@
             cursor: pointer;
         }
     }
-}
