--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -7,10 +7,13 @@
   
   /* Set a maximum width for the main container */
   .contact-page {
-    display: inline;
-    max-width: 1000px;
+    display: flex;
+    // align-items: center;
+    justify-content: center;
+    max-width: 1600px;
     margin: 0 auto;
-    grid-template-columns: 1fr 1.25fr;
+    grid-template-columns: 1em 1fr;
+    // gap: 100px;
     // padding: 20px;
 
     h1 {
@@ -89,17 +92,8 @@
     align-items: center;
     text-align: center;
     height: 100%;
-    // position: relative;
     margin-left: 100px;
-    // border: lime 5px solid;
-            // position: absolute;
-        // left: 10%;
-        // top: 45%;
-        // transform: translateY(-50%);
-        width: auto;
-        // vertical-align: middle;
-        // display: table-cell;
-        // max-height: 90%;
+    width: auto;
   }
   
   /* Adjust font sizes and margins for smaller screens */
@@ -150,8 +144,7 @@
         font-size: 20px;
         resize: none;
         min-height: 25px;
-        // height: 200px;
-        // font-family: 'Open Sans', sans-serif;  
+
         
         width: 100%;
         border: 0;
@@ -213,39 +206,26 @@
   
   /* Style the image container (if you decide to uncomment it) */
   .texas-img {
-    border: limegreen 5px solid;
-    // display: flex;
-    // position: absolute;
-    // justify-content: center;
-    // left: 60%;
-    // text-align: center;
-    // margin-top: 20px;
-      // bottom: 0;
-
-
-      position: relative;
-      left: 90%;
-      top: 50%;
-      // transform: translateY(-90%);
-      // height: 100%;
-      // max-height: 90%;
-      animation: fadeIn 1s 1.5s backwards;
-      animation-delay: 1.5s;
-    }
+    display: grid;
+    justify-self: center;
+    align-items: center;
+    margin-left: 100px;
+    animation: fadeIn 1s 1.5s backwards;
+    animation-delay: 1.5s;
+  }
   
   .texas-img img {
-    max-width: 100%;
-    height: 100%;
+     max-width: 100%;
+    height: auto;
     border: #201e1e 5px solid;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   
-
-  @media screen and (max-width: 768px) {
+  @media all and (max-width: 936px) {
     .contact-text-area {
       padding: 0;
       // right:10%;
-      margin: 10px;
+      margin: 0;
     }
 
     h1 {
@@ -254,8 +234,8 @@
     }
     
     p {
-      padding: 0;
-      font-size: 1.9rem;
+      padding: 10px;
+      font-size: 2.2srem;
       margin-bottom: 10px;
     }
     
@@ -267,6 +247,21 @@
     textarea {
       width: 100%;
       margin-bottom: 10px;
+    }
+  }
+
+  @media all and (max-width: 936px) {
+
+
+    .contact-text-area {
+      padding-left: 20px;
+      padding-right: 20px;
+      // right:10%;
+      // margin: 20px;
+    }
+
+    textarea {
+      height: 100px;
     }
   }
 
