display none for the texas image for phone users and testing y axis scrolling

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -215,7 +215,7 @@
   }
   
   .texas-img img {
-     max-width: 100%;
+    max-width: 100%;
     height: auto;
     border: #201e1e 5px solid;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -262,6 +262,17 @@
 
     textarea {
       height: 100px;
+    }
+  }
+
+
+  @media all and (max-width: 500px) {
+    .texas-img {
+      display: none;
+    }
+
+    body {
+      overflow-y: scroll; /* Allow vertical scrolling */
     }
   }
 
