adding vh to make sure the page scrolls on phones

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -4,6 +4,10 @@
     padding: 0;
     box-sizing: border-box;
   }
+
+  body {
+    min-height: 100vh;
+  }
   
   /* Set a maximum width for the main container */
   .contact-page {
